--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
     <h2>Tugas 4 MySQL</h2>
     <h4>Create Table sepak Bola</h4>
-    <img src="CREATE TABLE sepakbola.png" alt="CREATE TABLE">
+    <img src="Image/CREATE TABLE sepakbola.png" alt="CREATE TABLE">
     <h4>Rename To sepakbola_indonesia</h4>
-    <img src="RENAME TO sepakbola_indonesia.png" alt="RENAME">
+    <img src="Image/RENAME TO sepakbola_indonesia.png" alt="RENAME">
     <h4>Drop Table sepakbola_indonesia</h4>
-    <img src="Drop table sepakbola_indonesia.png" alt="Drop Table">
+    <img src="Image/Drop table sepakbola_indonesia.png" alt="Drop Table">
     <h4>Drop Database permainan</h4>
-    <img src="DROP DATABASE permainan.png" alt="Drop Database">
+    <img src="Image/DROP DATABASE permainan.png" alt="Drop Database">
 
 </body>
 </html>
